Fix height to vh in AlignContentSample.pcss

--- a/src/pages/align-content-sample/AlignContentSample.pcss
+++ b/src/pages/align-content-sample/AlignContentSample.pcss
@@ -9,7 +9,7 @@
   font: 1.75rem sans-serif;
   text-align: center;
   border: 3px solid black;
-  height: 100%;
+  height: 100vh;
   
   & div::before {
     content: '';
